# magnadigitize

./: AGENTS.md  magnadoodle.py  pyproject.toml
